<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_notificat"
            android:icon="@drawable/notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/likes"
            android:title="@string/favourite" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />


        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/email"
            android:title="@string/contactus" />

        <item
            android:id="@+id/nav_aboutapp"
            android:icon="@drawable/aboutapp"
            android:title="@string/aboutapp" />

        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/star"
            android:title="@string/ratingapponstore" />

        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/signout"
            android:title="@string/signout" />

    </group>
</menu>